feature: getStorePhoto 기능 분리